fix issue with profile image stretching

--- a/styles.css
+++ b/styles.css
@@ -117,11 +117,15 @@ a:hover {
     display: flex;
     flex-direction: row;
     gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .pic {
-    flex-basis: 3.5rem;
-    aspect-ratio: 1;
+    max-width: 100%;
+    flex: 0 0 3.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
     border-radius: 50%;
 }
 
